# DSA

./: .gitignore  CMakeLists.txt  coverage.sh
cmake/: CodeCoverage.cmake
docs/: architecture.md
include/common/: comparator.h  freer.h  visitor.h
include/data_structures/array/: array.h
include/data_structures/bloom_filter/: bloom_filter.h
include/data_structures/disjoint_set/: disjoint_set.h
include/data_structures/graph/: graph.h
include/data_structures/hashing/: hash_functions.h  hash_table.h
include/data_structures/heap/: heap.h
include/data_structures/linked_list/: linked_list.h
include/data_structures/queue/: queue.h
include/data_structures/stack/: stack.h
include/data_structures/tree/binary_search_tree/: bst.h
include/data_structures/tree/binary_tree/: binary_tree.h
include/data_structures/tree/red_black_tree/: rb_tree.h
include/utils/: result_code.h
scripts/: auto_fix_includes.sh
src/data_structures/array/: array.c
src/data_structures/stack/: stack.c  stack_test.c
src/utils/: result_code.c
src/utils/test/: malloc_test_wrapper.c  malloc_test_wrapper.h  malloc_test_wrapper_test.c  test_helpers.c
tests/: test_runner.c
tests/array/: test_array_create.c  test_array_destroy.c
